# barrel

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  Doxyfile  README.md  annotated.html  annotated_dup.js  barrel_8h.html  barrel_8h.js  barrel_8h_source.html  class_barrel_cmd_1_1_proc-members.html  class_barrel_cmd_1_1_proc.html  class_brew-members.html  class_brew.html  class_brew.js  class_brew_command-members.html  class_brew_command.html  class_brew_command.js  classes.html  concept_enum_type.html  concepts.html  concepts.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  menudata.js  namespace_barrel_spec.html  namespace_brew_command_type.html  namespace_brew_spec.html  namespacemembers.html  (+22 more)
.circleci/: config.yml
.github/workflows/: barrel.wiki.yml
doc/internal/: TIP.md
docs/: README.md
docs/cues/: README.md
include/: barrel.h  barrel_helpers.h  barrel_meta.h  brew.h  cmd.h  command.h  commands.h  helpers.h  homebrew_data.h  meta.h  proc.h  spec.h  types.h  utils.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_8.js  enums_0.js  enums_1.js  enumvalues_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: barrel.cc
